feat: update READEME

--- a/model/hifigan/run-December-20-2022_09+33PM-0000000/config.json
+++ b/model/hifigan/run-December-20-2022_09+33PM-0000000/config.json
@@ -4,7 +4,7 @@
     "run_name": "run",
     "project_name": null,
     "run_description": "\ud83d\udc38Coqui trainer run.",
-    "print_step": 25,
+    "print_step": 10,
     "plot_step": 100,
     "model_param_stats": false,
     "wandb_entity": null,
@@ -24,7 +24,7 @@
     "distributed_url": "tcp://localhost:54321",
     "mixed_precision": false,
     "epochs": 1000,
-    "batch_size": 128,
+    "batch_size": 64,
     "eval_batch_size": 32,
     "grad_clip": [
         5,
@@ -58,8 +58,8 @@
         "frame_shift_ms": null,
         "frame_length_ms": null,
         "stft_pad_mode": "reflect",
-        "sample_rate": 44100,
-        "resample": false,
+        "sample_rate": 22050,
+        "resample": true,
         "preemphasis": 0.0,
         "ref_level_db": 20,
         "do_sound_norm": false,
